<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_authentication"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".AuthActivity">

    <LinearLayout
        android:id="@+id/app_title_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="35sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"

            android:text="Busra Ercelik"
            android:textAlignment="center"
            android:textColor="@color/colorGray"
            android:textSize="22sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:layout_below="@+id/app_title_name"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:hint="@string/email_auth"
            android:inputType="textEmailAddress"
            android:text=""
            android:backgroundTint="@color/colorGray"
            android:textColor="@color/colorGray"
            android:textColorHint="@color/colorGray"
            android:textSize="25sp"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/password_auth"
            android:inputType="textPassword"
            android:text=""
            android:backgroundTint="@color/colorGray"
            android:textColor="@color/colorGray"
            android:textColorHint="@color/colorGray"
            android:textSize="25sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:weightSum="2"
        android:layout_above="@id/text_bottom"
        android:layout_margin="15dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_sign_in"
            android:text="@string/sign_in_auth"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/btn_registration"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:background="@drawable/bg_btn_sign_in"
            android:text="@string/sign_up_auth"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="30sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="80dp"
        android:text="@string/subtitle_auth"
        android:textColor="@color/colorGray"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="invisible"
        android:theme="@style/CircularProgress"
        android:layout_marginTop="70dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        style="@style/Widget.AppCompat.ProgressBar"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/ic_logo_256"
        android:contentDescription="Logo" />


</RelativeLayout>