<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activity.MainActivity"
    android:background="?attr/screenBackground">


<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="198dp">

        <TextView
            android:id="@+id/titlePageEdit"
            android:layout_marginTop="20dp"
            android:textSize="26sp"
            android:textColor="@color/colorWhite"
            android:text="Edit Task"
            android:textAlignment="center"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:background="#131E69"
            android:layout_height="1dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="-60dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/listItemBackground"
        android:orientation="vertical"
        android:paddingBottom="22dp"
        android:paddingTop="22dp">

        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_marginBottom="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/editTitleTask"
                android:textSize="18sp"
                android:textColor="?attr/listItemTextHeading"
                android:text="@string/add_title_task"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextTitleEdit"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/bg_input_task"
                android:hint="What You Do?"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textColor="?attr/editTextColor"
                android:textColorHint="#B5B5B5" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/textViewCategory"
                android:textSize="18sp"
                android:textColor="?attr/listItemTextHeading"
                android:text="@string/add_category_task"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextCategoryEdit"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@drawable/bg_input_task"
                android:hint="What type of task?"
                android:inputType="text"
                android:paddingLeft="12dp"
                android:textColor="?attr/editTextColor"
                android:textColorHint="#B5B5B5" />

        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewFrequency"
                android:textSize="18sp"
                android:textColor="?attr/listItemTextHeading"
                android:text="@string/add_frequency_task"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Spinner
                android:id="@+id/spinnerFrequencyOptionsEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="12dp">
            </Spinner>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/editDescTask"
                android:textSize="18sp"
                android:textColor="?attr/listItemTextHeading"
                android:text="@string/add_desc_task"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/editTextDescEdit"
                android:inputType="text"
                android:background="@drawable/bg_input_task"
                android:paddingLeft="12dp"
                android:textColorHint="#B5B5B5"
                android:maxLength="25"
                android:textColor="?attr/editTextColor"
                android:hint="How to?"
                android:layout_width="match_parent"
                android:layout_height="30dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewDateTask"
                android:textSize="18sp"
                android:textColor="?attr/listItemTextHeading"
                android:text="@string/add_date_task"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextDateEdit"
                    android:inputType="text"
                    android:background="@drawable/bg_input_task"
                    android:paddingLeft="12dp"
                    android:layout_marginEnd="5dp"
                    android:textColorHint="#B5B5B5"
                    android:textColor="?attr/editTextColor"
                    android:hint="When will?"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"/>

                <ImageButton
                    android:id="@+id/btnEditTime"
                    android:layout_marginTop="3dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="@style/clockTheme"/>

                <ImageButton
                    android:id="@+id/btnEditDate"
                    android:layout_marginTop="3dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    style="@style/calenderTheme"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnEdit"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="Update Task"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn_create"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <Button
        android:id="@+id/btnShare"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="Share Task"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn_create"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/btnDelete"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/btn_delete"
        android:textColor="@color/colorWhite"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn_delete"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="40dp" />



</LinearLayout>
</ScrollView>